test file update

--- a/templates/organizer/organizer.html
+++ b/templates/organizer/organizer.html
@@ -23,7 +23,7 @@
                 <div class="card-body">
                     <h5 class="card-title">My Events</h5>
                     <p class="card-text">View and manage all your created events.</p>
-                    <a href="/my-events" class="btn btn-primary">View My Events</a> <!-- Link to view user's events -->
+                    <a href="user/signin.html" class="btn btn-primary">View My Events</a> <!-- Link to view user's events -->
                 </div>
             </div>
         </div>
