--- a/templates/organizer/add_event.html
+++ b/templates/organizer/add_event.html
@@ -6,6 +6,10 @@
 <div class="container">
     <h1>Add New Event</h1>
     <form method="POST" enctype="multipart/form-data">
+        {% if error %}
+            <div class="alert alert-danger">{{ error }}</div>  
+        {% endif %}
+        
         <div class="mb-3">
             <label for="name" class="form-label">Event Name:</label>
             <input type="text" id="name" name="name" class="form-control" required>
