App.py with DB connection sign in and sign up

--- a/templates/signin.html
+++ b/templates/signin.html
@@ -10,8 +10,8 @@
             <div class="alert alert-danger">{{                error }}</div>  
         {% endif %}
         <div class="mb-3">
-            <label for="username" class="form-label">Username:</label>
-            <input type="text" id="username" name="username" class="form-control" required>
+            <label for="email" class="form-label">Email:</label>
+            <input type="text" id="email" name="email" class="form-control" required>
         </div>
         <div class="mb-3">
             <label for="password" class="form-label">Password:</label>
