Added interests page and name page. Slightly changed login to add session to keep track of userID and names Slightly changed base.html to go say "Welcome, name"

--- a/templates/base.html
+++ b/templates/base.html
@@ -91,10 +91,16 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/signin">Sign In</a>
                     </li>
+                    {% elif request.endpoint in ['setname', 'interests'] %}
+
+                    <li class="nav-item d-flex align-items-center">
+                        <span class="navbar-text me-3">Welcome to EventFinder!</span>  <!-- Display the username here -->
+                    </li>
+
                     {% else %}
                     <li class="nav-item d-flex align-items-center">
                         <img src="{{ url_for('static', filename='images/user_picture.png') }}" alt="User" class="rounded-circle" style="width: 20px; height: 20px; margin-right: 5px;">
-                        <span class="navbar-text me-3">Welcome, {{ username }}</span>  <!-- Display the username here -->
+                        <span class="navbar-text me-3">Welcome, {{ session['first_name'] }}</span>  <!-- Display the username here -->
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/organizer">Organizer</a>
