--- a/templates/user/mainapp.html
+++ b/templates/user/mainapp.html
@@ -84,22 +84,20 @@
     <div class="list-group">
         {% for event in events %}
             <div class="list-group-item">
-                <a href="{{ url_for('event_details', event_id=loop.index0) }}">
+                <a href="{{ url_for('event_details', event_id=event.event_id) }}">
                     <div>  
-                        <img src="{{ url_for('static', filename='images/' + event.image) }}" class="img-fluid" alt="{{ event.name }}" style="border-radius: 8px; max-width: 20vh; max-height: 15vh;"> <!-- Full-width image -->
-    
-                        <h5 class="mt-3" style="font-size: 1.8rem;">{{ event.name }}</h5>
+                        <img src="{{ url_for('static', filename='images/' + event.image_url) }}" class="img-fluid" alt="{{ event.name }}" style="border-radius: 8px; max-width: 20vh; max-height: 15vh;"> 
+                        <h5 class="mt-3" style="font-size: 1.8rem;">{{ event.event_name }}</h5>
                         <div class="row">
                             <div class="col-md-8">
                                 <div class="row">
                                     <div class="col-md-6">
                                         <p class="card-text"><strong>Location:</strong> {{ event.location }}</p>
-                                        <p class="card-text"><strong>Address:</strong> {{ event.address }}</p>
-                                        <p class="card-text"><strong>Category:</strong> {{ event.category }}</p>
-                                        <p class="card-text"><strong>Venue:</strong> {{ event.venue }}</p>
+                                        <p class="card-text"><strong>Category:</strong> {{ event.category_name }}</p>
                                     </div>
                                     <div class="col-md-6">
-                                        <p class="card-text"><strong>Time:</strong> {{ event.time }}</p>
+                                        <p class="card-text"><strong>Date:</strong> {{ event.date}}</p>
+                                        <p class="card-text"><strong>Time:</strong> {{ event.event_time }}</p>
                                         <p class="card-text"><strong>Capacity:</strong> {{ event.capacity }}</p>
                                     </div>
                                 </div>
