RSVP function and Bookings Page

--- a/templates/base.html
+++ b/templates/base.html
@@ -106,6 +106,9 @@
                         <a class="nav-link" href="/organizer">Organizer</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/bookings">Bookings</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/logout">Sign Out</a>
                     </li>
                     {% endif %}
