--- a/templates/organizer/add_event.html
+++ b/templates/organizer/add_event.html
@@ -53,8 +53,12 @@
         </div>
         
         <div class="mb-3">
-            <label for="time" class="form-label">Time:</label>
+            <label for="time" class="form-label">Time Start:</label>
             <input type="time" id="time" name="event_start" class="form-control" required>
+        </div>
+        <div class="mb-3">
+            <label for="time" class="form-label">Time End:</label>
+            <input type="time" id="time" name="event_end" class="form-control" required>
         </div>
         
         <div class="mb-3">
